Tue Jun 10 23:52:19 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:
        * m4/config_h.m4:

          Remove feature test and autoheader template for
          ACE_HAS_BROKEN_SAP_ANY.  This feature test macro is no longer
          used in ACE.

Tue Jun 10 23:49:46 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/config_h.m4:

          Remove autoheader template for ACE_HAS_BROKEN_NESTED_TEMPLATES.
          This feature test macro is no longer used in ACE.

Tue Jun 10 23:47:46 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/config_h.m4:

          Remove autoheader template for ACE_HAS_SUNOS4_SIGNAL_T.
          This feature test macro is no longer used in ACE.

Tue Jun 10 23:45:34 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:
        * m4/config_h.m4:

          Remove feature test and autoheader template for
          ACE_HAS_BROKEN_CONDITIONAL_STRING_CAST.  This feature test macro
          is no longer used in ACE.

Tue Jun 10 23:43:19 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:
        * m4/config_h.m4:

          Remove feature test and autoheader template for
          ACE_HAS_BROKEN_CONVERSIONS.  This feature test macro is no
          longer used in ACE.

Tue Jun 10 23:41:11 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:
        * m4/config_h.m4:

          Remove feature test and autoheader template for
          ACE_HAS_BROKEN_NAMESPACES.  This feature test macro is no longer
          used in ACE.

Tue Jun 10 23:39:09 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/config_h.m4:

          Remove autoheader template for ACE_HAS_SYSCALL_GETRUSAGE.  This
          feature test macro is no longer used in ACE.

Tue Jun 10 23:16:31 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:
        * m4/config_h.m4:

          Remove feature test and autoheader template for