@@ -2919,139 +2919,6 @@ ACE_CACHE_CHECK([for template specialization],
        ])
   ],[AC_DEFINE([ACE_HAS_TEMPLATE_SPECIALIZATION])],)
 
-dnl Check if platform supports *standard* template specialization
-ACE_CACHE_CHECK([for standard template specialization],
-  [ace_cv_feature_cxx_std_template_specialization],[
-    AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[
-// Some compilers have a hard time with this test since the syntax is
-// too "new" for them.
-
-// general vector type
-template<class T>
-class Vector
-{
-public:
-  Vector (void);
-  Vector (int);
-
-  T& elem (int i) { return v[i]; }
-  T& operator[] (int i);
-private:
-  T* v;
-  int sz;
-};
-
-// void * specialization
-template<>
-class Vector<void *>
-{
-public:
-  Vector (void);
-  Vector (int);
-
-  void*& elem (int i) { return p[i]; }
-  void*& operator[] (int i);
-private:
-  void** p;
-  int sz;
-};
-      ]],[[
-Vector<int> vi;
-Vector<void *> vpv;
-      ]])],[
-       ace_cv_feature_cxx_std_template_specialization=yes
-      ],[
-       ace_cv_feature_cxx_std_template_specialization=no
-      ])
-  ],
-  [AC_DEFINE([ACE_HAS_STD_TEMPLATE_SPECIALIZATION])],
-  [AC_MSG_WARN([$CXX does not support standard full template specialization.
-ACE will require it in the near future.])])
-
-if test "$ace_cv_feature_cxx_std_template_specialization" = yes; then
-
-dnl Check if platform supports *standard* template class member specialization
-ACE_CACHE_CHECK([for standard template class member specialization],
-  [ace_cv_feature_cxx_std_template_class_member_specialization],[
-    AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[
-// Some compilers have a hard time with this test since the syntax is
-// too "new" for them.
-
-// general vector type
-template<class T>
-class Vector
-{
-public:
-  Vector (void);
-  Vector (int);
-
-  T& elem (int i) { return v[i]; }
-  T& operator[] (int i);
-private:
-  T* v;
-  int sz;
-};
-
-// void * specialization
-template<>
-class Vector<void *>
-{
-public:
-  Vector (void);
-  Vector (int);
-
-  void*& elem (int i) { return p[i]; }
-  void*& operator[] (int i);
-private:
-  void** p;
-  int sz;
-};
-
-void *&
-Vector<void *>::operator[] (int i)
-{
- return p[i];
-}
-      ]],[[
-       Vector <void *> vpv;
-      ]])],[
-       ace_cv_feature_cxx_std_template_class_member_specialization=yes
-      ],[
-       ace_cv_feature_cxx_std_template_class_member_specialization=no
-      ])
-  ],[AC_DEFINE([ACE_HAS_STD_TEMPLATE_CLASS_MEMBER_SPECIALIZATION])],)
-
-
-dnl Check if platform supports partial template specialization
-ACE_CACHE_CHECK([for partial template specialization],
-  [ace_cv_feature_cxx_partial_template_specialization],[
-     AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[
-template <bool C, typename Ta>
-struct Foo;
-
-template <typename Ta>
-struct Foo<true, Ta>
-{
-  typedef Ta result_type;
-};
-
-template <typename Ta>
-struct Foo<false, Ta>
-{
-  typedef void result_type;
-};
-       ]],[[
-  Foo<true, int>::result_type a = 2;
-       ]])],[
-        ace_cv_feature_cxx_partial_template_specialization=yes
-       ],[
-        ace_cv_feature_cxx_partial_template_specialization=no
-       ])
-  ],[],[AC_MSG_WARN([$CXX does not support partial template specialization.
-ACE will require it in the near future.])])
-
-fi  dnl test $ace_cv_feature_cxx_std_template_specialization = yes
-
 dnl Check if platform supports template typedefs
 ACE_CACHE_CHECK([for template typedefs],
   [ace_cv_feature_posix_template_typedefs],[
