@@ -1,3 +1,13 @@
+Tue Jun 10 23:57:53 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>
+
+        * configure.ac:
+        * m4/config_h.m4:
+
+          Remove feature tests and autoheader templates for
+          ACE_HAS_STD_TEMPLATE_SPECIALIZATION and
+          ACE_HAS_STD_TEMPLATE_CLASS_MEMBER_SPECIALIZATION.
+          These feature test macros are no longer used in ACE.
+
 Tue Jun 10 23:52:19 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>
 
         * configure.ac:
